# backbone

./: CMakeLists.txt  README.md
app/: CMakeLists.txt  qml.qrc
app/qml/: detail.qml  index.qml  main.qml  search.qml  welcome.qml
app/src/: main.cpp  types.h
app/src/entities/: branch.cpp  branch.h  corecontext.cpp  corecontext.h  entity.cpp  entity.h
app/src/presenters/: consts.cpp  consts.h  detailpagepresenter.cpp  detailpagepresenter.h  indexpagepresenter.cpp  indexpagepresenter.h  searchpagepresenter.cpp  searchpagepresenter.h
app/src/usecases/: usersearchusecase.cpp  usersearchusecase.h
backbone/: CMakeLists.txt
backbone/include/backbone/: appcontroller.h  applicationframe.h  args.h  block.h  container.h  context.h  global.h  incubator.h  page.h  pagepresenter.h  presenter.h  qmlcomponentscache.h  qmlglobalscope.h  qmlinjector.h  qmlinjectorbuilder.h  router.h
backbone/src/: appcontroller.cpp  applicationframe.cpp  block.cpp  componentscache.h  container.cpp  context.cpp  global.cpp  incubator.cpp  page.cpp  pagepresenter.cpp  presenter.cpp  qmlcomponentscache.cpp  qmlglobalscope.cpp  qmlinjector.cpp  qmlinjectorbuilder.cpp  router.cpp
